<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.AnalysisActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#26a69a">

        <ImageView
            android:id="@+id/img_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/blood_pressure_icon_vector" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/img_view"
            android:layout_toRightOf="@id/img_view"
            android:background="#26a69a"
            android:gravity="center"
            android:text="@string/static_title"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/message_result"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/combined_chart_max"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/combined_chart_min"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>