<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.ManageMenuFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/indigo_daisy"
        android:textSize="40sp"
        android:text="BloodPressure "
        android:textFontWeight="40"
        android:gravity="center"
        android:background="@drawable/btn_custom"

        />
    <ImageView
        android:id="@+id/img_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/label_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@mipmap/blood_pressure_icon_vector" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_view"
        android:layout_marginTop="35dp"
        android:gravity="center"

        >
    <ImageButton
        android:id="@+id/btn_move_list_user"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/move_list_user"
        android:background="@mipmap/user_image"
        android:radius="5dp"
        />
    <TextView
        android:id="@+id/label_move_list_or_detail_user"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_list_user"
        android:layout_alignLeft="@+id/btn_move_list_user"
        android:layout_below="@+id/btn_move_list_user"
        android:textFontWeight="40"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        />

    <ImageButton
        android:id="@+id/btn_move_list_room"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignTop="@+id/btn_move_list_user"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/btn_move_list_user"
        android:text="@string/move_list_room"
        android:background="@mipmap/room_image"
        android:radius="5dp"/>
    <TextView
        android:id="@+id/label_move_list_room"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_list_room"
        android:layout_alignLeft="@+id/btn_move_list_room"
        android:layout_below="@+id/btn_move_list_room"
        android:textFontWeight="40"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        />

    <ImageButton
        android:id="@+id/btn_move_list_new"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/label_move_list_or_detail_user"
        android:layout_alignLeft="@+id/label_move_list_or_detail_user"
        android:layout_marginTop="40dp"
        android:background="@mipmap/news_image"
        android:text="@string/move_list_news"
        android:radius="5dp"/>
    <TextView
        android:id="@+id/label_move_list_new"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_list_news"
        android:layout_alignLeft="@+id/btn_move_list_new"
        android:layout_below="@+id/btn_move_list_new"
        android:textFontWeight="40"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"
        />
    <ImageButton
        android:id="@+id/btn_move_list_static"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="40dp"
        android:layout_alignTop="@+id/btn_move_list_new"
        android:layout_toRightOf="@+id/btn_move_list_new"
        android:background="@mipmap/static_image"
        android:radius="5dp"
        android:fontFamily="@font/roboto_regular"
        />
    <TextView
        android:id="@+id/label_move_static"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/move_list_static"
        android:layout_alignLeft="@+id/btn_move_list_static"
        android:layout_below="@+id/btn_move_list_static"
        android:textFontWeight="40"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"/>
    </RelativeLayout>
</RelativeLayout>